--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html>
     <head>
         <title>Switch Manager documentation</title>
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body>
-        <h1>Switch Manager design prototype</h1>
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FIEBhXmDOLZruwMUCXHTasJ%2FSwitchManager---dashboard%3Ftype%3Ddesign%26node-id%3D1-2%26t%3DvZhdcs8aednpKFHO-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26mode%3Ddesign" allowfullscreen></iframe>
+    <body class="w-full h-full p-4 flex flex-col justify-center items-center">
+        <h1 class="text-2xl my-2 text-center">Switch Manager project documentation</h1>
+        <div class="my-2">
+            <iframe class="bg-black rounded" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FIEBhXmDOLZruwMUCXHTasJ%2FSwitchManager---dashboard%3Ftype%3Ddesign%26node-id%3D1-2%26t%3DvZhdcs8aednpKFHO-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26mode%3Ddesign" allowfullscreen></iframe>
+            <div class="flex justify-between h-48 mt-2 gap-x-2">
+                <div class="hover:cursor-pointer ease-in-out duration-200 hover:drop-shadow-md hover:bg-stone-200 rounded bg-stone-100 w-4/12 h-full flex flex-col items-center p-4 font-light">
+                    <p class="mb-8 text-lg">Database schema</p>
+                    <svg class="w-12 h-12" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M21 7C21 5.3126 19.6581 4.05416 18.1041 3.27715C16.4902 2.47023 14.3307 2 12 2C9.66928 2 7.50977 2.47023 5.89593 3.27715C4.34191 4.05416 3 5.3126 3 7V17C3 18.6874 4.34191 19.9458 5.89593 20.7229C7.50977 21.5298 9.66928 22 12 22C14.3307 22 16.4902 21.5298 18.1041 20.7229C19.6581 19.9458 21 18.6874 21 17V7ZM5.12992 14.1529C5.40214 13.6724 6.01238 13.5035 6.49291 13.7757C7.77337 14.5011 9.738 15 12.0001 15C14.2621 15 16.2267 14.5011 17.5072 13.7757C17.9877 13.5035 18.598 13.6724 18.8702 14.1529C19.1424 14.6334 18.9736 15.2436 18.493 15.5159C16.8417 16.4514 14.5168 17 12.0001 17C9.48328 17 7.15841 16.4514 5.50709 15.5159C5.02656 15.2436 4.85769 14.6334 5.12992 14.1529ZM6.49283 8.77571C6.0123 8.50349 5.40207 8.67235 5.12984 9.15289C4.85762 9.63342 5.02648 10.2437 5.50702 10.5159C7.15833 11.4514 9.48321 12 12 12C14.5168 12 16.8416 11.4514 18.4929 10.5159C18.9735 10.2437 19.1423 9.63342 18.8701 9.15289C18.5979 8.67235 17.9877 8.50349 17.5071 8.77571C16.2267 9.50111 14.262 10 12 10C9.73792 10 7.77329 9.50111 6.49283 8.77571Z" fill="#323232"/>
+                    </svg>
+                </div>
+                <div class="hover:cursor-pointer ease-in-out duration-200 hover:drop-shadow-md hover:bg-stone-200 rounded bg-stone-100 w-4/12 h-full flex flex-col items-center p-4 font-light">
+                    <p class="mb-8 text-lg">API schema</p>
+                </div>
+                <div class="hover:cursor-pointer ease-in-out duration-200 hover:drop-shadow-md hover:bg-stone-200 rounded bg-stone-100 w-4/12 h-full flex flex-col items-center p-4 font-light">
+                    <p class="mb-8 text-lg">Figma design</p>
+                    <svg class="w-12 h-12" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none">
+                        <path fill="#1ABCFE" d="M8.55 8c0-1.289 1.019-2.333 2.275-2.333C12.082 5.667 13.1 6.71 13.1 8c0 1.289-1.018 2.333-2.275 2.333C9.57 10.333 8.55 9.29 8.55 8z"/>
+                        <path fill="#0ACF83" d="M4 12.667c0-1.289 1.019-2.334 2.275-2.334H8.55v2.334C8.55 13.955 7.531 15 6.275 15S4 13.955 4 12.667z"/>
+                        <path fill="#FF7262" d="M8.55 1v4.667h2.275c1.257 0 2.275-1.045 2.275-2.334C13.1 2.045 12.082 1 10.825 1H8.55z"/>
+                        <path fill="#F24E1E" d="M4 3.333c0 1.289 1.019 2.334 2.275 2.334H8.55V1H6.275C5.019 1 4 2.045 4 3.333z"/>
+                        <path fill="#A259FF" d="M4 8c0 1.289 1.019 2.333 2.275 2.333H8.55V5.667H6.275C5.019 5.667 4 6.71 4 8z"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
