--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>Switch Manager documentation</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script type="module">
+            import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+            mermaid.initialize({ startOnLoad: true });
+        </script>
     </head>
     <body class="w-full h-full p-4 flex flex-col justify-center items-center">
         <h1 class="text-2xl my-2 text-center">Switch Manager project documentation</h1>
@@ -28,6 +32,35 @@
                         <path fill="#A259FF" d="M4 8c0 1.289 1.019 2.333 2.275 2.333H8.55V5.667H6.275C5.019 5.667 4 6.71 4 8z"/>
                     </svg>
                 </div>
+            </div>
+            <p>database schema to move to dedicated documentation github page</p>
+            <div class="mermaid">
+                erDiagram
+                    CUSTOMER {
+                        string  firstname "NN"
+                        string  lastname  "NN"
+                        uuid    id        "NN"
+                        string  type      "NN"
+                        string  address   "NN"
+                    }
+                    SWITCH {
+                        string      name            "NN"
+                        string(ip)  ip              "NN"
+                        string      model
+                        float       gps_lat
+                        float       gps_long
+                    }
+                    CONNEXION {
+                        string  ppp         "NN"
+                        int     port        "NN"
+                        uuid    switchId    "NN"
+                        uuid    customerId  "NN"
+                        boolean toggled     "NN"
+                        boolean status      "NN"
+                        enum    type        "NN"
+                        date    dueDate
+                    }
+
             </div>
         </div>
     </body>
